# MRDQN_OPS

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  commands.py  full_training_comparison.py  pyproject.toml  requirements.txt
Comparison/: compare_models.py
IQN/: model.py  train_iqn.py  util.py
IQN/models/IQN_full_training/: model.pth  model_fixed.pth
Martingale_DQN/: martingale_dqn.py  train_martingale.py
RL_Environment/: CryptoEnv.py
Rainbow_DQN/: rainbow.py  train_rainbow.py
Report/: martingale_dqn_report.tex
common/: base_trainer.py  utils.py
configs/: config.yaml
configs/data/: btc.yaml  eth.yaml
configs/model/: rainbow.yaml
configs/training/: default.yaml
crypto_dqn_ops/: __init__.py
crypto_dqn_ops/agents/: __init__.py  rainbow_agent.py
crypto_dqn_ops/data/: __init__.py  data_loader.py
crypto_dqn_ops/environment/: __init__.py  crypto_env.py
crypto_dqn_ops/inference/: __init__.py  predictor.py  server.py
crypto_dqn_ops/training/: __init__.py  lightning_trainer.py  rl_datamodule.py  train_with_lightning.py
crypto_dqn_ops/utils/: __init__.py  helpers.py  replay_buffer.py  segment_tree.py
data/: .gitignore  crypto_data.pkl.dvc
graphics/: full_training_results_20250923_162253.csv  full_training_results_20250924_133855.csv  full_training_results_20250924_133855.pkl  old_results.pkl
models/IQN_full_training/: model.pth
models/Martingale_full_training/: model.pth
scripts/: export_tensorrt.sh  serve_mlflow.sh  setup.sh  setup_data.py
